@@ -4,7 +4,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Let ILastModifier fallback to the creator.
+  [jone]
 
 
 1.1.0 (2014-09-02)
